k8s/infra/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service  # MUST match what we put in ConfigMap/Secret
  namespace: payflow
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  clusterIP: None  # Headless service (Best practice for StatefulSets)
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: payflow
spec:
  serviceName: "postgres-service"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          # Liveness Probe: "Are you alive?"
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "payflow"]
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5
          # Readiness Probe: "Can I send you traffic?"
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "payflow"]
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
