k8s/infra/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: payflow
spec:
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  selector:
    app: rabbitmq
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-statefulset
  namespace: payflow
spec:
  serviceName: "rabbitmq-service"
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
          
          # --- THE SIMPLIFIED FIX ---
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "-q", "ping"]
            initialDelaySeconds: 120  # Wait 2 full minutes before checking
            periodSeconds: 30
            timeoutSeconds: 20        # Allow 20s for the command to respond
            failureThreshold: 5
          
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "-q", "ping"]
            initialDelaySeconds: 60   # Wait 1 min before checking readiness
            periodSeconds: 10
            timeoutSeconds: 20        # Allow 20s for the command to respond
            failureThreshold: 5
          # --------------------------

  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
